--- a/GraceAge/assets/css/elderly_tips.css
+++ b/GraceAge/assets/css/elderly_tips.css
@@ -20,7 +20,7 @@ html {
 }
 
 #tips_panel{
-    
+    font-family: "Open Sans";
     color:#405250;
     background-color: #F0F4C3;
     border: 0px solid;
@@ -62,12 +62,12 @@ main{
     border-color:#CDDC39;
     padding-left: 20px;
     margin-bottom: 0px;
-    font-size: 10px;
-}
+    font-size:10px;
+    }
 
 .list-group-item>span{
     position: relative;
-    font-size: 20px;    
+    font-size: 25px;    
 }
 
 
